API support for Profile Ranks (#86)
* percentiles

* add tiers to manifest

* fix nullable issue

* bump version

* fix old failing test
