# open-api/openapi.json
@@ -3,7 +3,7 @@
   "info": {
     "title": "RaidHub API",
     "description": "The Semi-public API for RaidHub",
-    "version": "1.3.0",
+    "version": "1.3.1",
     "contact": {
       "name": "RaidHub Admin",
       "email": "admin@raidhub.io"
@@ -1804,11 +1804,15 @@
             "exclusiveMinimum": true
           },
           "value": {
-            "type": "integer",
-            "minimum": 0
+            "type": "number"
+          },
+          "percentile": {
+            "type": "number",
+            "minimum": 0,
+            "maximum": 1
           }
         },
-        "required": ["rank", "value"]
+        "required": ["rank", "value", "percentile"]
       },
       "PlayerProfileGlobalStats": {
         "type": "object",
@@ -1837,6 +1841,22 @@
             ],
             "nullable": true
           },
+          "totalTimePlayed": {
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/GlobalStat"
+              }
+            ],
+            "nullable": true
+          },
+          "contest": {
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/GlobalStat"
+              }
+            ],
+            "nullable": true
+          },
           "sumOfBest": {
             "allOf": [
               {
@@ -1846,7 +1866,14 @@
             "nullable": true
           }
         },
-        "required": ["clears", "freshClears", "sherpas", "sumOfBest"]
+        "required": [
+          "clears",
+          "freshClears",
+          "sherpas",
+          "totalTimePlayed",
+          "contest",
+          "sumOfBest"
+        ]
       },
       "WorldFirstEntry": {
         "type": "object",
@@ -2172,6 +2199,27 @@
               "minItems": 1
             },
             "description": "The set of versionId for each activityId"
+          },
+          "rankingTiers": {
+            "type": "array",
+            "items": {
+              "type": "object",
+              "properties": {
+                "minPercentile": {
+                  "type": "number",
+                  "minimum": 0,
+                  "maximum": 1
+                },
+                "tierName": {
+                  "type": "string"
+                },
+                "tierColor": {
+                  "type": "string",
+                  "description": "A tailwindcss color class for the tier"
+                }
+              },
+              "required": ["minPercentile", "tierName", "tierColor"]
+            }
           }
         },
         "required": [
@@ -2186,7 +2234,8 @@
           "resprisedRaidIds",
           "resprisedChallengeVersionIds",
           "pantheonIds",
-          "versionsForActivity"
+          "versionsForActivity",
+          "rankingTiers"
         ],
         "additionalProperties": false
       },
